--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.11.0
 Django==5.2.10
 django-environ==0.12.0
+django-filter==25.2
 djangorestframework==3.16.1
 psycopg2-binary==2.9.11
 sqlparse==0.5.5
